# scorpion

./: .gitattributes  .gitignore  .hgignore  404.html  Apptainer  CHANGES.md  README.md  Singularity  build_configs.py  compile_commands.json  domain.pddl  domain_gripper.pddl  generate_callstring.py  hsiwr.py  hsiwr.sif  index.html  instance_2_1_0.pddl  instance_2_2_0.pddl  out  plot.py  run.sh  run_planner.py  sitemap.xml  siw.py  siw.sif  siwr.py  siwr.sif  sse.sif  test-output.sas
src/: CMakeLists.txt
src/cmake_modules/: FastDownwardMacros.cmake
src/preprocess_h2/: CMakeLists.txt  README.md  atom.h  axiom.cc  axiom.h  causal_graph.cc  causal_graph.h  domain_transition_graph.cc  h2_mutexes.cc  h2_mutexes.h  helper_functions.cc  helper_functions.h  max_dag.cc  max_dag.h  mutex_group.cc  mutex_group.h  operator.cc  operator.h  planner.cc  scc.cc  scc.h  state.cc  state.h  variable.cc  variable.h
src/search/: CMakeLists.txt  DownwardFiles.cmake  abstract_task.h  axioms.cc  command_line.cc  command_line.h  evaluator.cc  evaluator.h  heuristic.cc  heuristic.h  open_list.h  per_state_array.h  per_state_bitset.cc  per_state_bitset.h  per_state_information.h  planner.cc  priority_queue.h  sampling.cc  sampling.h  scalar_evaluator.h  search_algorithm.cc  search_algorithm.h  search_engine.cc  search_engine.h  search_node_info.cc  search_node_info.h  search_space.cc  search_space.h  search_statistics.cc  search_statistics.h  state_id.h  state_registry.cc  state_registry.h  task_proxy.cc  task_proxy.h
src/search/algorithms/: array_pool.h  dynamic_bitset.h  fact_map.cc  fact_map.h  int_hash_set.h  int_packer.cc  partial_state_tree.cc  partial_state_tree.h  priority_queues.h  sccs.cc  sccs.h  segmented_array_pool.h  segmented_vector.h  subscriber.h
src/search/cartesian_abstractions/: abstract_state.cc  abstract_state.h  abstraction.cc  abstraction.h  additive_cartesian_heuristic.cc  additive_cartesian_heuristic.h  cartesian_set.cc  cartesian_set.h  cegar.cc  cegar.h  cost_saturation.cc  cost_saturation.h  flaw.cc  flaw.h  flaw_search.cc  flaw_search.h  match_tree.cc  match_tree.h  refinement_hierarchy.cc  refinement_hierarchy.h  shortest_paths.cc  shortest_paths.h  split_selector.cc  split_selector.h  subtask_generators.cc  subtask_generators.h  transition.h  transition_rewirer.cc  transition_rewirer.h  transition_system.cc  transition_system.h  types.h  utils.cc  utils.h  utils_landmarks.cc
src/search/cegar/: abstract_search.cc  abstract_search.h  abstract_state.cc  abstract_state.h  abstraction.cc  abstraction.h  additive_cartesian_heuristic.cc  additive_cartesian_heuristic.h  cartesian_heuristic_function.cc  cartesian_heuristic_function.h  cartesian_set.cc  cartesian_set.h  cegar.cc  cegar.h  cost_saturation.cc  cost_saturation.h  domains.cc  domains.h  flaw.cc  flaw.h  flaw_search.cc  flaw_search.h  flaw_selector.cc  flaw_selector.h  flaw_selector_fast.cc  flaw_selector_fast.h  flaw_selector_slow.cc  flaw_selector_slow.h  match_tree.cc  match_tree.h  max_cartesian_heuristic.cc  max_cartesian_heuristic.h  ocp_constraints.cc  ocp_constraints.h  ocp_heuristic.cc  ocp_heuristic.h  refinement_hierarchy.cc  refinement_hierarchy.h  scp_optimizer.cc  scp_optimizer.h  (+15 more)
src/search/cost_saturation/: abstraction.cc  abstraction.h  abstraction_generator.cc  abstraction_generator.h  canonical_heuristic.cc  canonical_heuristic.h  cartesian_abstraction.cc  cartesian_abstraction.h  cartesian_abstraction_generator.cc  cartesian_abstraction_generator.h  cost_partitioned_heuristic.cc  cost_partitioned_heuristic.h  cost_partitioning_collection_generator.cc  cost_partitioning_collection_generator.h  cost_partitioning_generator.cc  cost_partitioning_generator.h  cost_partitioning_generator_greedy.cc  cost_partitioning_generator_greedy.h  cost_partitioning_generator_random.cc  cost_partitioning_generator_random.h  cost_partitioning_heuristic.cc  cost_partitioning_heuristic.h  cost_partitioning_heuristic_collection_generator.cc  cost_partitioning_heuristic_collection_generator.h  diversifier.cc  diversifier.h  explicit_abstraction.cc  explicit_abstraction.h  explicit_projection_factory.cc  explicit_projection_factory.h  greedy_order_utils.cc  greedy_order_utils.h  max_cost_partitioning_heuristic.cc  max_cost_partitioning_heuristic.h  max_heuristic.cc  max_heuristic.h  merge_and_shrink_abstraction_generator.cc  merge_and_shrink_abstraction_generator.h  optimal_cost_partitioning_heuristic.cc  optimal_cost_partitioning_heuristic.h  (+48 more)
src/search/evaluators/: combining_evaluator.cc  combining_evaluator.h  comparison_evaluator.cc  comparison_evaluator.h
src/search/heuristics/: additive_heuristic.cc  additive_heuristic.h  array_pool.h  relaxation_heuristic.cc  relaxation_heuristic.h
src/search/landmarks/: lama_ff_synergy.cc  landmark.h  landmark_cost_assignment.cc  landmark_cost_assignment.h  landmark_cost_partitioning_algorithms.cc  landmark_cost_partitioning_algorithms.h  landmark_cost_partitioning_heuristic.cc  landmark_cost_partitioning_heuristic.h  landmark_count_heuristic.cc  landmark_count_heuristic.h  landmark_heuristic.cc  landmark_heuristic.h  landmark_sum_heuristic.cc  landmark_sum_heuristic.h
src/search/lp/: cplex_solver_interface.cc  lp_solver.cc  lp_solver.h
src/search/merge_and_shrink/: factored_transition_system.cc  factored_transition_system.h  fts_factory.cc  fts_factory.h  heuristic_representation.cc  heuristic_representation.h  label_equivalence_relation.h  merge_and_shrink_heuristic.cc  merge_scoring_function_dfp.cc  merge_scoring_function_miasm.cc  transition_system.h
src/search/novelty/: fact_indexer.cc  fact_indexer.h  goal_test.cc  goal_test.h  novelty_evaluator.cc  novelty_evaluator.h  novelty_table.cc  novelty_table.h  state_mapper.cc  state_mapper.cpp  state_mapper.h  tokenizer.h
src/search/open_lists/: tiebreaking_open_list.cc
src/search/operator_counting/: constraint_generator.cc  constraint_generator.h  operator_counting_heuristic.cc  pho_abstraction_constraints.cc  (+1 more)
src/translate/: instantiate.py  main.py  options.py  sas_tasks.py  timers.py  translate.py
(+374 files in other folders)
